--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+*~
+\#*
+.#*
+
+GPATH
+GRTAGS
+GTAGS
+
+vgcore.*
+massif.out*
+cscope.out
+
+compile_commands.json
+
+.depend
+
 # Prerequisites
 *.d
 
